management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@import "../variables";

/* GalleryPane */
.umcGalleryPane.dgrid {
	overflow: hidden;
	height: auto;
	border: none;

	.dgrid-scroller {
		outline: none;
		position: relative;
		overflow: visible;
	}

	.dgrid-selected {
		background-color: inherit;
	}
}

/* gallery header may be outside of gallerypane */
.umcGalleryCategoryHeader {
	padding: 0 0 0.25em 0;
	margin: 1em 5px 0.5em 5px;
	font-size: $font-size-medium;
	font-weight: bold;
	border-bottom: solid 1px $base-border-color;
	// on the android tablet the border would only be displayed at width ~300px
	// this background image hack fixes the problem, see:
	//   http://stackoverflow.com/a/13550951
	background-image: url(../images/blank.png);
}

.umcGalleryCategoryHeader:first-child {
	margin-top: 0;
}

.umcGalleryPane {
	// disable selection on touch devices
	// taken from: http://stackoverflow.com/a/11237968
	-webkit-touch-callout:none;
	-webkit-user-select:none;

	.umcGalleryWrapperItem {
		padding: 5px;
	}

	.umcGalleryItem {
		position: relative;
		outline: none;
		padding: 5px;
		background-color: rgba(255, 255, 255, 0.5);
		transition-duration: 0.25s;
		transition-property: background-color, opacity, border;

		// definitions in px instead of em due to size of image in px
		//padding: 15px 20px;
		//margin: 0 12px 10px 0;
		height: 100px;

		.umcGalleryName {
			font-size: $font-size-medium;
			color: $text-color-lighter;
			font-weight: bold;
			border-bottom: solid 1px $gallery-border-color;
			line-height: 1.05em;
			height: 55%;
			transition-duration: inherit;
			transition-property: color, border;
		}

		.umcGalleryDescription {
			color: $text-color-lightest;
			line-height: 1.05em;
			margin-top: 5px;
			transition-duration: inherit;
			transition-property: color;
		}

		.umcGalleryIcon {
			margin: 5px 0 0 5px;
			padding-bottom: 0;
//			position: absolute;
//			visibility: hidden;
//			display: none;
			height: 70px;
			float: left;
		}

		/* if an icon is present, set a margin to the text elements */
		.umcGalleryIcon + .umcGalleryName,
		.umcGalleryIcon + .umcGalleryName + .umcGalleryDescription {
			margin-left: 65px;
		}

		.umcGalleryStatusIcon {
			position: absolute;
			top: 5px;
			left: 66px;
			width: 24px;
			height: 24px;
		}

		.umcFavoriteIconDefault,
		.umcFavoriteIconInverted {
			position: absolute;
			top: 0;
			right: 10px;
			width: 10px;
			height: 10px;
			line-height: 0;
		}

		.umcGalleryContextIcon {
			icon-image(0, -40, "../");
			position: absolute;
			top: 11px;
			left: auto;
			right: 5px;
		}
	}

	.umcGalleryItemActive,
	.umcGalleryItem:hover {
	//	background-color: @grayAthens;
	//	.border-radius(5px);
		cursor: pointer;
		.umcGalleryCategoryFavorite {
			background-color: #ffffff!important;
		}
		.umcGalleryName,
		.umcGalleryDescription {
			color: white;
			border-color: white;
		}
		.umcFavoriteIconDefault {
			display: none;
		}
		.umcGalleryContextIcon {
			icon-image(0, -40, "../", "-white");
		}
		.umcGalleryContextIcon:hover {
			background-position: -20px -40px;
		}
		.umcGalleryContextIcon:active {
			background-position: -20px -40px;
			opacity: 0.67;
		}
	}
}

// no left/right padding for full size item
@media (max-width: 767px) {
	.umcGalleryPane .umcGalleryWrapperItem {
		padding-left: 0;
		padding-right: 0;
	}
}


/* UMC overview page icons */
.umcOverviewPane {
//	.umcGalleryItemActive .umcGalleryContextIcon,
//	.umcGalleryItem:hover .umcGalleryContextIcon {
//		visibility: visible!important;
//	}
//	.umcGalleryItem	.umcGalleryContextIcon {
//		visibility: hidden;
//	}

	.umcGalleryName,
	.umcGalleryDescription {
		//padding-left: 60px !important;
	}
}

